--- a/config/database.yml
+++ b/config/database.yml
@@ -16,10 +16,11 @@ development:
 
 production:
   <<: *default
-  database: Budget_app_production
-  username: postgres
+  url: <%= ENV["DATABASE_URL"] %>
+  database: your_app_production
+  username: yourusername
   #kindly replace your database password
-  password: 1234
+  password: <%= ENV["YOUR_APP_DATABASE_PASSWORD"] %>
 
 test:
   <<: *default
